# crypto-predictor

./: .env-example  .gitignore  README.md  Trabalho_IA_Final_2025.md  exemplo_uso.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: Poloniex_AAVEBTC_d.csv  Poloniex_ADAUSDT_d.csv  Poloniex_AKITAUSDT_d.csv  Poloniex_ALICEUSDT_d.csv  Poloniex_ALPACAUSDT_d.csv  Poloniex_ALPINEUSDT_d.csv  Poloniex_BATBTC_d.csv  Poloniex_BCHBTC_d.csv  Poloniex_BICOUSDT_d.csv  Poloniex_BTCUSDD_d.csv  Poloniex_BTCUSDT_d.csv  Poloniex_CHRUSDT_d.csv  Poloniex_COOLUSDT_d.csv  Poloniex_CORNUSDT_d.csv  Poloniex_DASHBTC_d.csv  Poloniex_ETCBTC_d.csv  Poloniex_ETHUSDD_d.csv  Poloniex_LTCUSDD_d.csv  Poloniex_XMRBTC_d.csv  Poloniex_XRPUSDD_d.csv
src/: analise_lucro.py  data_load.py  features.py  lucro.py  main.py  models.py
src/statistics/: analysis.py  plots.py
src/util/: config.py  utils.py
tests/: test_analysis.py  test_data_load.py  test_features.py
