[tool.poetry]
name = "crypto-predictor"
version = "0.1.0"
description = "Cryptocurrency price prediction using machine learning"
authors = ["Alex Pereira, Eduardo Braga"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.5.0"
scipy = ">=1.14.1"
matplotlib = ">=3.10"
seaborn = "0.13.2"
rich = "14.0.0"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
black = "24.4.2"
ruff = "0.4.8"
pre-commit = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88  # Padrão do black, pode ser 100 ou 120 se preferir
target-version = ['py312']  # Ajuste para sua versão do Python, ex: py310, py39 etc.
skip-string-normalization = false

[tool.ruff]
line-length = 88
lint.extend-select = ["I"]  # Ordena imports também